# proxio

./: Cargo.toml  justfile
.opencode/skills/openspec-apply-change/: SKILL.md
.opencode/skills/openspec-explore/: SKILL.md
.opencode/skills/openspec-propose/: SKILL.md
crates/proxio-adapters/: Cargo.toml
crates/proxio-adapters/src/: apply.rs  command_runner.rs  file_ops.rs  git.rs  lib.rs  npm.rs  paths.rs  pnpm.rs  shell_env.rs  systemd_user_env.rs
crates/proxio-adapters/tests/: command_targets.rs  file_targets.rs
crates/proxio-cli/: Cargo.toml
crates/proxio-cli/src/: main.rs
crates/proxio-core/: Cargo.toml
crates/proxio-core/src/: config.rs  lib.rs  plan.rs  validate.rs
crates/proxio-core/tests/: config_and_plan.rs  profiles.rs
crates/proxio-diagnose/: Cargo.toml
crates/proxio-diagnose/src/: check.rs  lib.rs  model.rs  proxy.rs  runner.rs
crates/proxio-diagnose/tests/: check_flow.rs  proxy_selection.rs
crates/proxio-ui/: Cargo.toml
crates/proxio-ui/src/: app.rs  lib.rs  main.rs  services.rs
crates/proxio-ui/tests/: app_state.rs
docs/superpowers/plans/: 2026-04-11-proxio-check-diagnose.md  2026-04-11-proxio-libcosmic-ui.md  2026-04-11-proxio-mvp.md  2026-04-11-proxio-profile-management.md  2026-04-11-proxio-ui-shell.md
docs/superpowers/specs/: 2026-04-11-proxio-check-diagnose-design.md  2026-04-11-proxio-libcosmic-ui-design.md  2026-04-11-proxio-mvp-design.md  2026-04-11-proxio-profile-management-design.md  2026-04-11-proxio-ui-shell-design.md
openspec/: config.yaml
