[workspace]
members = [
  "crates/proxio-core",
  "crates/proxio-adapters",
  "crates/proxio-cli",
  "crates/proxio-diagnose",
  "crates/proxio-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic.git", default-features = false, features = ["tokio", "winit"] }
serde = { version = "1", features = ["derive"] }
tempfile = "3"
toml = "0.8"
url = "2.5"
