[package]
name = "proxio"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
proxio-core = { path = "../proxio-core" }
proxio-adapters = { path = "../proxio-adapters" }
proxio-diagnose = { path = "../proxio-diagnose" }
serde.workspace = true
toml.workspace = true
