[package]
name = "proxio-ui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
proxio-core = { path = "../proxio-core" }
proxio-adapters = { path = "../proxio-adapters" }
proxio-diagnose = { path = "../proxio-diagnose" }
tokio = { version = "1", features = ["rt", "sync"] }
toml.workspace = true

[dev-dependencies]
proxio-diagnose = { path = "../proxio-diagnose" }
