[package]
name = "proxio-ui"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
cosmic.workspace = true
proxio-core = { path = "../proxio-core" }
proxio-adapters = { path = "../proxio-adapters" }
proxio-diagnose = { path = "../proxio-diagnose" }
toml.workspace = true

[dev-dependencies]
proxio-diagnose = { path = "../proxio-diagnose" }
